<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="100"
    android:id="@+id/mapActivity">

    <!--TOP SECTION OF VERTICAL LINEAR LAYOUT WITH LIST VIEW-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:orientation="vertical"
        android:id="@+id/topLinearLayout" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Test"
            android:id="@+id/fieldPapersMsg"
            android:background="@color/black"
            android:textColor="@color/osm_light_green"
            android:paddingLeft="6dp"
            android:visibility="gone" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".MapActivity">
    
            <com.mapbox.mapboxsdk.views.MapView
                android:id="@+id/mapView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/locationButton"
                android:src="@drawable/location"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:background="@drawable/roundedbutton"
                android:padding="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:text="+"
                android:background="@drawable/roundedbutton"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:id="@+id/nodeModeButton"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="8dp"
                android:paddingTop="12dp"
                android:paddingBottom="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/rectangle"
                android:text="GPS Accuracy Unknown"
                android:id="@+id/gpsAccuracyView"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:gravity="center"
                android:textStyle="bold"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addNodeMarkerBtn"
                android:src="@mipmap/drop_pin"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="1dp"
                android:paddingBottom="30dp"
                android:visibility="gone"/>

            <Button
                android:background="@drawable/roundedbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_node"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:id="@+id/addNodeBtn"
                android:layout_above="@+id/addNodeMarkerBtn"
                android:layout_centerHorizontal="true"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:visibility="gone"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/moveNodeMarkerBtn"
                android:src="@mipmap/maki_star_orange"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="1dp"
                android:paddingBottom="30dp"
                android:visibility="gone"/>

            <Button
                android:background="@drawable/roundedbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Place Node"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:id="@+id/moveNodeBtn"
                android:layout_above="@+id/moveNodeMarkerBtn"
                android:layout_centerHorizontal="true"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:visibility="gone"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/moveNodeModeBtn"
                android:background="@drawable/roundedbutton"
                android:src="@drawable/ic_swap_horiz_black_36dp"
                android:padding="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/indicatorBtn"
                android:background="@drawable/roundedbutton"
                android:src="@drawable/ic_info_outline"
                android:padding="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="140dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp" />

        </RelativeLayout>

    </LinearLayout>

    <!--BOTTOM SECTION OF VERTICAL LINEAR LAYOUT WITH LIST VIEW-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:orientation="vertical"
        android:id="@+id/bottomLinearLayout">

        <!-- top of ListView for title and close button -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textSize="24dp"
                android:textColor="#7ebc6f"
                android:id="@+id/tagTextView"/>

            <!-- down arrow -->
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/imageViewCloseList"
                android:background="@null"
                android:src="@drawable/arrow"/>

            <!--tag button-->
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tagButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_local_offer_black_36dp"
                android:background="@drawable/roundedbutton"
                android:padding="10dp"
                android:layout_marginRight="8dp"/>

            <!--delete button-->
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deleteButton"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@id/tagButton"
                android:src="@drawable/ic_delete_black_36dp"
                android:background="@drawable/roundedbutton"
                android:padding="10dp"
                android:layout_marginRight="16dp"
                android:visibility="gone"/>

        </RelativeLayout>

        <!-- separator -->
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#7ebc6f"
            android:layout_marginTop="2dp" />

        <!-- list of tags -->
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tagListView"
            android:visibility="gone"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="+  Add Tags"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/addTagsBtn"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:background="#44ffffff"/>

    </LinearLayout>

    <!--BOTTOM SECTION OF VERTICAL LINEAR LAYOUT WITH LIST VIEW-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:orientation="vertical"
        android:id="@+id/indicatorLinearLayout">

        <!-- top of ListView for title and close button -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textSize="24dp"
                android:textColor="#7ebc6f"
                android:id="@+id/indicatorTextView" />

            <!-- down arrow -->
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:id="@+id/indicatorsCloseList"
                android:background="@null"
                android:src="@drawable/arrow"/>

        </RelativeLayout>

        <!-- separator -->
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#7ebc6f"
            android:layout_marginTop="2dp" />

        <!-- list of tags -->
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/indicatorListView"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>